<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/assess_day_alert"
        android:title="@string/assess_day_alert"
        app:showAsAction="never"/>

<!--    <item android:id="@+id/assess_due_alert"-->
<!--        android:title="@string/assess_due_alert"-->
<!--        app:showAsAction="never"/>-->

    <item android:id="@+id/all_assess_menu3"
        android:title="@string/return_all_assess"
        app:showAsAction="never"/>

    <item android:id="@+id/all_courses_menu4"
        android:title="@string/return_all_courses"
        app:showAsAction="never"/>

    <item android:id="@+id/all_terms_menu7"
        android:title="@string/return_to_all_terms"
        app:showAsAction="never"/>

    <item android:id="@+id/main_menu_menu8"
        android:title="@string/return_to_main"
        app:showAsAction="never"/>

</menu>