<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateAssessActivity">

    <TextView
        android:id="@+id/upd_assess_title"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_assess" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/upd_assess_objective_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assess_objective"
            android:onClick="setObjective" />
        <RadioButton
            android:id="@+id/upd_assess_performance_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assess_performance"
            android:onClick="setPerformance" />
    </RadioGroup>

    <TextView
        android:id="@+id/upd_assess_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:text="@string/assess_name" />

    <EditText
        android:id="@+id/upd_assess_name_input"
        android:hint="\'Assessment 1\'"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        />

    <Button
        android:id="@+id/upd_assess_due_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assess_due"
        style="@style/ff_button_style"/>

    <TextView
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/list_text_size"
        android:id="@+id/upd_assess_due_date_txt"/>

    <Button
        android:id="@+id/save_new_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:onClick="saveUpdateAssess"
        style="@style/ff_button_style"/>
</LinearLayout>
</ScrollView>