<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UpdateCourseActivity">

        <TextView
            android:id="@+id/upd_course_title"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_course" />

        <TextView
            android:id="@+id/upd_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:text="@string/course_title" />

        <EditText
            android:id="@+id/upd_course_name_input"
            android:hint="\'Course 1\'"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            />

        <Button
            android:id="@+id/upd_course_start_date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_start"
            style="@style/ff_button_style"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/list_text_size"
            android:id="@+id/upd_course_start_date_txt"/>

        <Button
            android:id="@+id/upd_course_end_date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_end"
            style="@style/ff_button_style"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/list_text_size"
            android:id="@+id/upd_course_end_date_txt"/>

        <TextView
            android:id="@+id/upd_course_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:text="@string/course_status" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/list_text_size"
            android:id="@+id/upd_course_status_txt"/>

        <TextView
            android:id="@+id/upd_course_mentor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:text="@string/mentor_name" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/list_text_size"
            android:id="@+id/upd_course_mentor_name_txt"/>
        <TextView
            android:id="@+id/upd_course_mentor_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:text="@string/mentor_email" />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/list_text_size"
            android:id="@+id/upd_course_mentor_email_txt"/>

        <TextView
            android:id="@+id/upd_course_mentor_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/list_text_size"
            android:text="@string/mentor_phone" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/list_text_size"
            android:id="@+id/upd_course_mentor_phone_txt"/>

        <Button
            android:id="@+id/save_course_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:onClick="saveUpdCourse"
            style="@style/ff_button_style"/>

    </LinearLayout>
</ScrollView>