<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTermActivity">

    <TextView
        android:id="@+id/upd_term_title"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_term" />

    <TextView
        android:id="@+id/upd_term_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:text="@string/term_title" />

    <EditText
        android:id="@+id/upd_term_name_input"
        android:hint="\'Term 1\'"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        />

    <Button
        android:id="@+id/upd_term_start_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_start"
        style="@style/ff_button_style"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/list_text_size"
        android:id="@+id/upd_term_start_date_txt"/>

    <Button
        android:id="@+id/upd_term_end_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_end"
        style="@style/ff_button_style"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/list_text_size"
        android:id="@+id/upd_term_end_date_txt"/>

    <Button
        android:id="@+id/save_upd_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:onClick="updateTerm"
        style="@style/ff_button_style"/>

</LinearLayout>
</ScrollView>