<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<LinearLayout
    android:id="@+id/assess_det_frag_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/del_assess2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_assess"
        style="@style/ff_button_style"/>

    <Button
        android:id="@+id/upd_assess_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_assess"
        style="@style/ff_button_style"/>

    <Button
        android:id="@+id/assess_notes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assess_notes_btn"
        style="@style/ff_button_style"/>
</LinearLayout>
    </ScrollView>

</LinearLayout>