<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAssessNoteActivity">

    <TextView
        android:id="@+id/new_assess_note_title"
        android:textAlignment="center"
        android:textSize="@dimen/list_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_assess_note" />

    <EditText
        android:id="@+id/new_assess_note_inputtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="@dimen/list_text_size"
        android:layout_weight="2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/new_assess_note_hint" />

    <Button
        android:id="@+id/new_assess_note_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:onClick="addAssessNote"
        style="@style/ff_button_style"/>

</LinearLayout>
</ScrollView>